# EpiSim-Rework

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  EpiSim.cpp  EpiSim.h  README.md  algomulti.cpp  algomulti.h  algononnaive.cpp  algononnaive.h  algorithm.cpp  algorithm.h  conf.ini  grapher.hpp  human.h  kernel.cl  multiAlgo.cpp  multiAlgo.h  oclAlgo.cpp  oclAlgo.h
.github/workflows/: cmake.yml  codeql-analysis.yml  rebase.yml
network/: networkAlgo.h  networkClient.cpp  networkClient.h  networkServer.cpp  networkServer.h  serializeHuman.cpp  serializeHuman.h  zlib_tools.cpp  zlib_tools.h
render/: render.h  sdlRender.cpp  sdlRender.h
